<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello!</string>
    <string name="app_name">Teraforming Mars Statistics</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="icon">Icon</string>
    <string name="deleteAll">Удалить все</string>
    <string name="exit">Выход</string>
    <string name="add">Добавить</string>
    <string name="updateCorp">Обновить корпорации</string>
    <string name="updateFio">Обновить ФИО</string>
    <string name="date">Дата</string>
    <string name="gameNum">№ партии</string>
    <string name="points">Очки</string>
    <string name="plyersNum">Кол-во игроков</string>
    <string name="fio">ФИО</string>
    <string name="corp">Корпорация</string>
    <string name="toMain">На главную</string>
    <string name="players">Игроки / Игры</string>
    <string name="graphs">Графики</string>
    <string name="divider">:</string>

</resources>