<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add"/>

    <item android:id="@+id/deleteAll"
        android:title="@string/deleteAll"
        android:icon="@android:drawable/ic_menu_delete"/>

    <item android:id="@+id/exit"
        android:title="@string/exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
    <item android:id="@+id/changeActivity"
        android:title="Players/games"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
</menu>