
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
<TableLayout
    android:id="@+id/tablelayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="96dp"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingLeft="5dp">-->
    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/gameNum"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/points"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/plyersNum"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/fio"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divider"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/corp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="#677566"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>
</TableLayout>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/list"
        />

</LinearLayout>