<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/butSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/butCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

    </LinearLayout>

    <ScrollView
        android:layout_above="@id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/date" />

                    <EditText
                        android:id="@+id/etDate"
                        android:focusable="false"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />


<!--                    <DatePicker-->
<!--                        android:id="@+id/datePicker"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_below="@+id/button"-->
<!--                        android:layout_centerHorizontal="true"-->
<!--                        android:layout_marginTop="48dp"/>-->

                </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gameNum" />

                <EditText
                    android:id="@+id/etGameNum"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number">

                    <requestFocus />
                </EditText>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/points" />

                    <EditText
                        android:id="@+id/etPoints"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:text="@string/plyersNum" />

                <!--                    <EditText-->
                <!--                        android:id="@+id/etNumofplayers"-->
                <!--                        android:layout_width="fill_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:inputType="number" />-->
                <Spinner
                    android:id="@+id/etNumofplayers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fio" />

                <!--                <EditText-->
                <!--                    android:id="@+id/etFio"-->
                <!--                    android:layout_width="fill_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:inputType="text" />-->
                <Spinner
                    android:id="@+id/spinnerFIO"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/corp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>